// file: proto/gcommon/v1/organization/messages/compliance_settings.proto
// version: 1.0.0
// guid: 01fb3d5c-a366-4271-a336-2312368dd4f2

edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "v1/organization";

message OrganizationComplianceSettings {
  // GDPR compliance enabled
  bool gdpr_enabled = 1;

  // Data retention period in days
  int32 data_retention_days = 2;

  // Whether data export is allowed
  bool data_export_enabled = 3;

  // Whether data deletion is allowed
  bool data_deletion_enabled = 4;

  // Compliance certifications
  repeated string certifications = 5;
}
